--- a/src/main/resources/views/adminjurusan/kelola-data-admin.fxml
+++ b/src/main/resources/views/adminjurusan/kelola-data-admin.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.KelolaDataAdminController">
     <fx:include source="../../components/adminjurusan/sidebar.fxml" />
    <VBox maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0">
       <children>
