--- a/src/main/resources/components/adminjurusan/sidebar.fxml
+++ b/src/main/resources/components/adminjurusan/sidebar.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="400" prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: #052C65;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="sidebarJurusan" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="400" prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: #052C65;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.SidebarController">
    <children>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
          <children>
@@ -25,7 +25,7 @@
             </Label>
          </children>
       </HBox>
-      <Button alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Kelola Data" textFill="WHITE">
+      <Button fx:id="btnKelolaData" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Kelola Data" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
@@ -36,7 +36,7 @@
             <Insets bottom="10.0" top="10.0" />
          </VBox.margin>
       </Button>
-      <Button alignment="TOP_LEFT" layoutX="10.0" layoutY="110.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Admin" textFill="WHITE">
+      <Button fx:id="btnAdmin" alignment="TOP_LEFT" layoutX="10.0" layoutY="110.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnAdminOnClicked" style="-fx-background-color: #052C65;" text="Admin" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
@@ -47,7 +47,7 @@
             <Insets left="80.0" />
          </padding>
       </Button>
-      <Button alignment="TOP_LEFT" layoutX="10.0" layoutY="130.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Mahasiswa" textFill="WHITE">
+      <Button fx:id="btnMahasiswa" alignment="TOP_LEFT" layoutX="10.0" layoutY="130.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Mahasiswa" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
@@ -58,7 +58,7 @@
             <Insets bottom="10.0" top="10.0" />
          </VBox.margin>
       </Button>
-      <Button alignment="TOP_LEFT" layoutX="10.0" layoutY="150.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Template Surat" textFill="WHITE">
+      <Button fx:id="btnTemplateSurat" alignment="TOP_LEFT" layoutX="10.0" layoutY="150.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnTemplateSuratOnClicked" style="-fx-background-color: #052C65;" text="Template Surat" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
@@ -69,7 +69,7 @@
             <Insets bottom="10.0" top="10.0" />
          </VBox.margin>
       </Button>
-      <Button alignment="TOP_LEFT" layoutX="10.0" layoutY="120.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Log Aktivitas" textFill="WHITE">
+      <Button fx:id="btnLogAktivitas" alignment="TOP_LEFT" layoutX="10.0" layoutY="120.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Log Aktivitas" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
@@ -80,7 +80,7 @@
             <Insets bottom="10.0" top="10.0" />
          </VBox.margin>
       </Button>
-      <Button alignment="TOP_LEFT" layoutX="10.0" layoutY="273.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Laporan" textFill="WHITE">
+      <Button fx:id="btnLaporan" alignment="TOP_LEFT" layoutX="10.0" layoutY="273.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Laporan" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
