--- a/src/main/resources/views/login.fxml
+++ b/src/main/resources/views/login.fxml
@@ -12,12 +12,15 @@
             <Insets bottom="50.0" top="30.0" />
          </VBox.margin>
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font name="Reddit Sans Black" size="36.0" />
          </font>
       </Label>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="20.0" prefWidth="300.0">
          <children>
-            <Label text="Username" textFill="#052c65" />
+            <Label text="Username" textFill="#052c65">
+               <font>
+                  <Font name="Reddit Sans Regular" size="12.0" />
+               </font></Label>
             <TextField fx:id="inputFieldUsername" promptText="Masukkan nama anda" />
          </children>
       </VBox>
@@ -27,10 +30,13 @@
             <PasswordField fx:id="inputFieldPassword" promptText="Masukkan password anda" />
          </children>
       </VBox>
-      <Button mnemonicParsing="false" onAction="#enterDashboard" style="-fx-background-color: #052C65;" text="Masuk" textFill="WHITE">
+      <Button mnemonicParsing="false" onAction="#enterDashboard" style="-fx-background-color: #052C65; -fx-cursor: hand;" text="Masuk" textFill="WHITE">
          <VBox.margin>
             <Insets top="30.0" />
          </VBox.margin>
+         <font>
+            <Font name="Reddit Sans Bold" size="12.0" />
+         </font>
       </Button>
    </children>
 </VBox>
