--- a/src/main/resources/views/adminjurusan/kelola-template-surat.fxml
+++ b/src/main/resources/views/adminjurusan/kelola-template-surat.fxml
@@ -17,7 +17,7 @@
                   <Font name="Reddit Sans Black" size="24.0" />
                </font>
             </Label>
-            <Button fx:id="btnTambahSuratBaru" mnemonicParsing="false" onAction="#btnTambahSuratBaruOnClicked" style="-fx-background-color: #052C65;" text="Tambahkan" textFill="WHITE">
+            <Button fx:id="btnTambahSuratBaru" mnemonicParsing="false" onAction="#btnTambahSuratBaruOnClicked" style="-fx-background-color: #052C65; -fx-cursor: hand;" text="Tambahkan" textFill="WHITE">
                <font>
                   <Font name="Reddit Sans Regular" size="12.0" />
                </font>
@@ -31,6 +31,9 @@
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
             </Button>
             <TableView prefHeight="200.0" prefWidth="200.0">
               <columns>
