--- a/src/main/resources/views/adminjurusan/overlay-tambah-template-surat-baru.fxml
+++ b/src/main/resources/views/adminjurusan/overlay-tambah-template-surat-baru.fxml
@@ -2,28 +2,11 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox alignment="CENTER" minHeight="-Infinity" prefHeight="40.0" prefWidth="200.0">
-         <children>
-            <Label text="Tambah Template Surat" textFill="#052c65" HBox.hgrow="ALWAYS">
-               <font>
-                  <Font name="Reddit Sans Black" size="14.0" />
-               </font>
-               <HBox.margin>
-                  <Insets right="20.0" />
-               </HBox.margin></Label>
-            <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-               <image>
-                  <Image url="@../../icons/x-circle.png" />
-               </image>
-            </ImageView>
-         </children>
-      </HBox>
       <Label text="Surat">
          <VBox.margin>
             <Insets top="15.0" />
@@ -47,7 +30,7 @@
       </Button>
       <HBox alignment="CENTER" minHeight="-Infinity" prefHeight="30.0" prefWidth="200.0">
          <children>
-            <Button alignment="CENTER" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Tambahkan" textFill="WHITE">
+            <Button alignment="CENTER" mnemonicParsing="false" style="-fx-background-color: #052C65; -fx-cursor: hand;" text="Tambahkan" textFill="WHITE">
                <font>
                   <Font name="Reddit Sans Black" size="12.0" />
                </font>
@@ -59,6 +42,6 @@
       </HBox>
    </children>
    <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+      <Insets bottom="20.0" left="40.0" right="40.0" top="30.0" />
    </padding>
 </VBox>
