--- a/src/main/resources/views/adminjurusan/overlay-tambah-template-surat-baru.fxml
+++ b/src/main/resources/views/adminjurusan/overlay-tambah-template-surat-baru.fxml
@@ -5,32 +5,33 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.OverlayTambahTemplateSuratController">
    <children>
       <Label text="Surat">
          <VBox.margin>
             <Insets top="15.0" />
          </VBox.margin></Label>
-      <TextField promptText="Masukkan nama surat" />
+      <TextField fx:id="inputNamaSurat" promptText="Masukkan nama surat" />
       <Label text="Keperluan">
          <VBox.margin>
             <Insets top="15.0" />
          </VBox.margin>
       </Label>
-      <TextField promptText="Masukkan keterangan keperluan surat" />
+      <TextField fx:id="inputKeterangan" promptText="Masukkan keterangan keperluan surat" />
       <Label layoutX="30.0" layoutY="144.0" text="File">
          <VBox.margin>
             <Insets top="15.0" />
          </VBox.margin>
       </Label>
-      <Button mnemonicParsing="false" text="Unggah File" textFill="#052c65">
+      <TextField fx:id="filePathField" promptText="File path ..." />
+      <Button fx:id="inputFile" mnemonicParsing="false" onAction="#onBrowse" text="Unggah File" textFill="#052c65">
          <font>
-            <Font name="Reddit Sans Bold" size="12.0" />
+            <Font name="Reddit Sans Regular" size="12.0" />
          </font>
       </Button>
       <HBox alignment="CENTER" minHeight="-Infinity" prefHeight="30.0" prefWidth="200.0">
          <children>
-            <Button alignment="CENTER" mnemonicParsing="false" style="-fx-background-color: #052C65; -fx-cursor: hand;" text="Tambahkan" textFill="WHITE">
+            <Button fx:id="btnTambahkan" alignment="CENTER" mnemonicParsing="false" style="-fx-background-color: #052C65; -fx-cursor: hand;" text="Tambahkan" textFill="WHITE">
                <font>
                   <Font name="Reddit Sans Black" size="12.0" />
                </font>
