--- a/src/main/resources/views/adminjurusan/kelola-data-admin.fxml
+++ b/src/main/resources/views/adminjurusan/kelola-data-admin.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.KelolaDataAdminController">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.KelolaDataAdminController">
     <fx:include source="../../components/adminjurusan/sidebar.fxml" />
    <VBox maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" style="-fx-cursor: hand;">
       <children>
@@ -18,7 +23,7 @@
                      <Font name="Reddit Sans Black" size="24.0" />
                   </font>
                </Label>
-               <Button mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Tambahkan" textFill="WHITE">
+               <Button fx:id="btnTambahkan" mnemonicParsing="false" onAction="#openOverlayTambahAdmin" style="-fx-background-color: #052C65;" text="Tambahkan" textFill="WHITE">
                   <VBox.margin>
                      <Insets bottom="15.0" top="15.0" />
                   </VBox.margin>
@@ -45,6 +50,19 @@
                <Insets left="20.0" right="20.0" top="20.0" />
             </VBox.margin>
          </VBox>
+         <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0">
+            <VBox.margin>
+               <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+            </VBox.margin>
+            <children>
+               <Button fx:id="btnEdit" mnemonicParsing="false" onAction="#openOverlayEditAdmin" prefWidth="50.0" text="Edit">
+                  <HBox.margin>
+                     <Insets right="10.0" />
+                  </HBox.margin>
+               </Button>
+               <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#openOverlayDeleteAdmin" text="Delete" />
+            </children>
+         </HBox>
       </children>
    </VBox>
 
