--- a/src/main/resources/components/adminprodi/sidebar.fxml
+++ b/src/main/resources/components/adminprodi/sidebar.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="400" prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: #052C65;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="sidebar" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="400" prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: #052C65;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.prodi.SidebarController">
     <children>
         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
             <children>
@@ -25,7 +28,7 @@
                 </Label>
             </children>
         </HBox>
-        <Button alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Dashboard" textFill="WHITE">
+        <Button fx:id="dashboardProdi" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Dashboard" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
@@ -36,7 +39,7 @@
                 <Insets bottom="10.0" top="10.0" />
             </VBox.margin>
         </Button>
-        <Button alignment="TOP_LEFT" layoutX="10.0" layoutY="273.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Permintaan Verifikasi" textFill="WHITE">
+        <Button fx:id="permintaanVerifSeluruh" alignment="TOP_LEFT" layoutX="10.0" layoutY="273.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnPermintaanVerifSeluruhOnClicked" style="-fx-background-color: #052C65;" text="Permintaan Verifikasi" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
