--- a/src/main/resources/views/adminjurusan/overlay-tambah-admin.fxml
+++ b/src/main/resources/views/adminjurusan/overlay-tambah-admin.fxml
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.overlay.OverlayFormTambahAdmin">
    <children>
+      <Label layoutX="40.0" layoutY="40.0" text="ID Admin" />
+      <TextField fx:id="inputIDAdmin" layoutX="40.0" layoutY="76.0" prefHeight="26.0" prefWidth="502.0" />
       <Label text="Nama Lengkap" />
-      <TextField prefHeight="26.0" prefWidth="502.0" />
-      <Label text="Nomor Telepon" />
-      <TextField />
-      <Label text="Tanggal Bergabung" />
-      <DatePicker prefWidth="450.0" />
-      <Label text="Username" />
-      <TextField />
+      <TextField fx:id="inputFullName" prefHeight="26.0" prefWidth="502.0" />
+      <Label text="Email" />
+      <TextField fx:id="inputEmail" />
+      <Label layoutX="40.0" layoutY="84.0" text="Jabatan" />
+      <ChoiceBox fx:id="inputPosition" prefHeight="26.0" prefWidth="430.0" />
       <Label text="Password" />
-      <PasswordField />
+      <PasswordField fx:id="inputPassword" />
+      <Label layoutX="40.0" layoutY="128.0" text="Konfirmasi Password" />
+      <PasswordField fx:id="inputConfirmedPassword" layoutX="40.0" layoutY="145.0" />
       <HBox alignment="CENTER" prefHeight="30.0" prefWidth="200.0">
          <children>
-            <Button fx:id="btnTambahkan" alignment="CENTER" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Tambahkan" textFill="WHITE" />
+            <Button fx:id="btnSubmitForm" alignment="CENTER" mnemonicParsing="false" onAction="#submitForm" style="-fx-background-color: #052C65;" text="Tambahkan" textFill="WHITE" />
          </children>
          <VBox.margin>
             <Insets top="30.0" />
