--- a/src/main/resources/views/adminjurusan/kelola-data-admin.fxml
+++ b/src/main/resources/views/adminjurusan/kelola-data-admin.fxml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.KelolaDataAdminController">
+<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.KelolaDataAdminController">
     <fx:include source="../../components/adminjurusan/sidebar.fxml" />
-   <VBox maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" style="-fx-cursor: hand;">
+   <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" style="-fx-cursor: hand;" HBox.hgrow="ALWAYS">
       <children>
           <fx:include source="../../components/admin/topbar.fxml" />
-         <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0">
+         <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" VBox.vgrow="ALWAYS">
             <children>
                <Label text="Kelola Data Admin" textFill="#052c65">
                   <font>
@@ -36,14 +31,18 @@
                   <padding>
                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                   </padding></Button>
-               <TableView prefHeight="200.0" prefWidth="200.0">
+               <TableView fx:id="tableViewAdmin" minHeight="200.0" style="-fx-border-color: #E4EEFF; -fx-border-width: 2px;" stylesheets="@../../css/table-view.css">
                  <columns>
-                   <TableColumn prefWidth="75.0" text="No" />
-                   <TableColumn prefWidth="150.0" text="Nama Lengkap" />
-                     <TableColumn prefWidth="75.0" text="No. telepon" />
-                     <TableColumn prefWidth="150.0" text="Tanggal Bergabung" />
-                     <TableColumn prefWidth="100.0" text="Aksi" />
+                   <TableColumn fx:id="numberColumn" prefWidth="75.0" text="No" />
+                     <TableColumn fx:id="adminIDColumn" prefWidth="120.20004272460938" styleClass=".table-header" text="ID" />
+                   <TableColumn fx:id="fullNameColumn" prefWidth="151.60003662109375" text="Nama Lengkap" />
+                     <TableColumn fx:id="emailColumn" prefWidth="143.60003662109375" text="Email" />
+                     <TableColumn fx:id="positionColumn" prefWidth="76.39996337890625" text="Jabatan" />
+                     <TableColumn fx:id="actionColumn" prefWidth="100.0" text="Aksi" />
                  </columns>
+                  <columnResizePolicy>
+                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                  </columnResizePolicy>
                </TableView>
             </children>
             <VBox.margin>
