--- a/src/main/resources/views/adminjurusan/kelola-template-surat.fxml
+++ b/src/main/resources/views/adminjurusan/kelola-template-surat.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<HBox fx:id="viewKelolaTemplateSurat" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.KelolaTemplateSuratController">
+<HBox fx:id="viewKelolaTemplateSurat" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.KelolaTemplateSuratController">
     <fx:include source="../../components/adminjurusan/sidebar.fxml" />
-    <VBox prefHeight="200.0" prefWidth="100.0">
+    <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" HBox.hgrow="ALWAYS">
         <fx:include source="../../components/admin/topbar.fxml" />
       <VBox prefHeight="200.0" prefWidth="100.0">
          <children>
@@ -45,6 +45,9 @@
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
             </TableView>
          </children>
          <VBox.margin>
