add logout logic for any users in the sidebar

--- a/src/main/resources/components/adminprodi/sidebar.fxml
+++ b/src/main/resources/components/adminprodi/sidebar.fxml
@@ -48,7 +48,7 @@
             </VBox.margin>
         </Button>
         <Region prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
-        <Button fx:id="btnLogout" alignment="BOTTOM_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #052C65;" text="Keluar" textFill="WHITE" VBox.vgrow="ALWAYS">
+        <Button fx:id="btnLogout" alignment="BOTTOM_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnLogoutOnClicked" style="-fx-background-color: #052C65;" text="Keluar" textFill="WHITE" VBox.vgrow="ALWAYS">
             <font>
                 <Font name="Reddit Sans Bold" size="14.0" />
             </font>
