separate data logic into repository package and change username to userID

--- a/src/main/resources/views/login.fxml
+++ b/src/main/resources/views/login.fxml
@@ -17,11 +17,11 @@
       </Label>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="20.0" prefWidth="300.0">
          <children>
-            <Label text="Nama pengguna" textFill="#052c65">
+            <Label text="ID Pengguna" textFill="#052c65">
                <font>
                   <Font name="Reddit Sans Regular" size="12.0" />
                </font></Label>
-            <TextField fx:id="inputFieldUsername" promptText="Masukkan nama anda" />
+            <TextField fx:id="inputFieldUserID" promptText="Masukkan nama anda" />
          </children>
       </VBox>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="20.0" prefWidth="300.0">
