--- a/src/main/resources/views/adminta/permintaan-verif-seluruh.fxml
+++ b/src/main/resources/views/adminta/permintaan-verif-seluruh.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.prodi.PermintaanVerifSeluruh">
+<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.ta.PermintaanVerifAllController">
     <fx:include source="../../components/adminta/sidebar.fxml" />
-    <VBox alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" prefHeight="700.0" prefWidth="573.0">
+    <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" HBox.hgrow="ALWAYS">
         <children>
             <fx:include source="../../components/admin/topbar.fxml" />
             <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0">
@@ -25,7 +25,7 @@
                             <Insets right="20.0" />
                         </HBox.margin>
                     </ImageView>
-                    <Label fx:id="judulHalaman" text="Permintaan Verifikasi TA">
+                    <Label fx:id="judulHalaman" text="Permintaan Verifikasi Tugas Akhir">
                         <font>
                             <Font name="Reddit Sans Black" size="24.0" />
                         </font>
@@ -35,41 +35,42 @@
                     <Insets left="20.0" right="20.0" top="30.0" />
                 </VBox.margin>
             </HBox>
-            <HBox prefHeight="19.0" prefWidth="560.0">
-                <VBox.margin>
-                    <Insets left="20.0" right="20.0" top="20.0" />
-                </VBox.margin>
-                <children>
-                    <VBox prefHeight="100.0" prefWidth="278.0">
-                        <children>
-                            <Label text="Seluruh Permintaan">
-                                <font>
-                                    <Font name="System Bold" size="14.0" />
-                                </font></Label>
-                        </children>
-                    </VBox>
-                    <HBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="100.0" prefWidth="278.0">
-                        <children>
-                            <Label text="Sort">
-                                <font>
-                                    <Font name="System Bold" size="14.0" />
-                                </font></Label>
-                            <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                                <image>
-                                    <Image url="@../../img/arrow-down-up.png" />
-                                </image>
-                            </ImageView>
-                        </children>
-                    </HBox>
-                </children>
-            </HBox>
-            <TableView prefHeight="400.0" prefWidth="200.0">
+         <HBox prefHeight="19.0" prefWidth="560.0">
+            <VBox.margin>
+               <Insets left="20.0" right="20.0" top="20.0" />
+            </VBox.margin>
+            <children>
+               <VBox prefHeight="20.0" prefWidth="335.0">
+                  <children>
+                     <Label text="Seluruh Permintaan">
+                        <font>
+                           <Font name="System Bold" size="14.0" />
+                        </font></Label>
+                  </children>
+               </VBox>
+               <HBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="20.0" prefWidth="352.0" HBox.hgrow="ALWAYS">
+                  <children>
+                     <Label text="Sort">
+                        <font>
+                           <Font name="System Bold" size="14.0" />
+                        </font></Label>
+                     <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+                        <image>
+                           <Image url="@../../img/arrow-down-up.png" />
+                        </image>
+                     </ImageView>
+                  </children>
+               </HBox>
+            </children>
+         </HBox>
+            <TableView fx:id="tableViewBerkasTA" VBox.vgrow="ALWAYS">
                 <columns>
-                    <TableColumn prefWidth="75.0" text="NIM" />
-                    <TableColumn prefWidth="75.0" text="Mahasiswa" />
-                    <TableColumn prefWidth="75.0" text="Aktivitas" />
-                    <TableColumn prefWidth="75.0" text="Tanggal" />
-                    <TableColumn prefWidth="75.0" />
+               <TableColumn fx:id="numberColumn" editable="false" prefWidth="75.0" text="No" />
+                    <TableColumn fx:id="idColumn" editable="false" prefWidth="90.39996337890625" text="NIM" />
+                    <TableColumn fx:id="nameColumn" editable="false" prefWidth="136.00003051757812" text="Mahasiswa" />
+                    <TableColumn fx:id="descriptionColumn" editable="false" prefWidth="168.800048828125" sortable="false" text="Keterangan" />
+                    <TableColumn fx:id="dateColumn" editable="false" prefWidth="96.0" text="Tanggal" />
+                    <TableColumn fx:id="actionColumn" editable="false" prefWidth="64.0" sortable="false" text="Aksi" />
                 </columns>
                 <opaqueInsets>
                     <Insets />
@@ -77,9 +78,9 @@
                 <VBox.margin>
                     <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
                 </VBox.margin>
-                <columnResizePolicy>
-                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                </columnResizePolicy>
+            <columnResizePolicy>
+               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
             </TableView>
         </children>
     </VBox>
