Add CRUD template surat, fix CRUD admin and CRUD mahasiswa

--- a/src/main/resources/views/adminjurusan/overlay/overlay-edit-data-admin.fxml
+++ b/src/main/resources/views/adminjurusan/overlay/overlay-edit-data-admin.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.scene.text.Font?>
 <VBox fx:id="overlayEditDataAdmin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" style="-fx-background-color: #F3F7FF;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.overlay.OverlayEditDataAdmin">
    <padding>
       <Insets bottom="20.0" left="30.0" right="40.0" top="30.0" />
@@ -21,6 +22,14 @@
       <PasswordField fx:id="inputPassword" />
       <Label text="Konfirmasi Password" />
       <PasswordField fx:id="inputConfirmedPassword" />
+      <Label layoutX="40.0" layoutY="259.0" text="Foto Profil" />
+      <PasswordField fx:id="inputFotoProfil" layoutX="40.0" layoutY="276.0" />
+      <Button fx:id="btnFileChooser" mnemonicParsing="false" onAction="#onBrowse" text="Unggah File" textFill="#052c65">
+         <font>
+            <Font name="Reddit Sans Regular" size="12.0" />
+         </font>
+      </Button>
+
       <HBox alignment="CENTER" prefHeight="30.0" prefWidth="200.0">
          <VBox.margin>
             <Insets top="30.0" />
