--- a/src/main/resources/views/adminjurusan/overlay/overlay-edit-data-mahasiswa.fxml
+++ b/src/main/resources/views/adminjurusan/overlay/overlay-edit-data-mahasiswa.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.text.Font?>
 <VBox fx:id="overlayEditDataMahasiswa" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" style="-fx-background-color: #F3F7FF;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.overlay.OverlayEditDataMahasiswa">
     <padding>
         <Insets bottom="20.0" left="30.0" right="40.0" top="30.0" />
@@ -25,6 +26,15 @@
       <TextField fx:id="editEmail" />
       <Label text="Password" />
       <PasswordField fx:id="editPassword" />
+        <Label text="Tahun Masuk" />
+        <TextField fx:id="editTahunMasuk" />
+        <Label text="Foto Profile" />
+        <TextField fx:id="editFotoProfil" />
+        <Button fx:id="btnFileChooser" mnemonicParsing="false" onAction="#onBrowse" text="Unggah File" textFill="#052c65">
+            <font>
+                <Font name="Reddit Sans Regular" size="12.0" />
+            </font>
+        </Button>
         <HBox alignment="CENTER" prefHeight="30.0" prefWidth="200.0">
             <VBox.margin>
                 <Insets top="60.0" />
