--- a/src/main/resources/views/adminjurusan/overlay/overlay-tambah-admin.fxml
+++ b/src/main/resources/views/adminjurusan/overlay/overlay-tambah-admin.fxml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox fx:id="overlayTambahAdmin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" style="-fx-background-color: #F3F7FF;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.overlay.OverlayTambahAdmin">
+<VBox fx:id="overlayTambahAdmin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="453.0" prefWidth="500.0" style="-fx-background-color: #F3F7FF;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.jurusan.overlay.OverlayTambahAdmin">
    <children>
       <Label layoutX="40.0" layoutY="40.0" text="ID Admin" />
       <TextField fx:id="inputIDAdmin" layoutX="40.0" layoutY="76.0" prefHeight="26.0" prefWidth="502.0" />
@@ -18,6 +24,13 @@
       <PasswordField fx:id="inputPassword" />
       <Label layoutX="40.0" layoutY="128.0" text="Konfirmasi Password" />
       <PasswordField fx:id="inputConfirmedPassword" layoutX="40.0" layoutY="145.0" />
+      <Label layoutX="40.0" layoutY="259.0" text="Foto Profil" />
+      <PasswordField fx:id="inputFotoProfil" layoutX="40.0" layoutY="276.0" />
+      <Button fx:id="btnFileChooser" mnemonicParsing="false" onAction="#onBrowse" text="Unggah File" textFill="#052c65">
+         <font>
+            <Font name="Reddit Sans Regular" size="12.0" />
+         </font>
+      </Button>
       <HBox alignment="CENTER" prefHeight="30.0" prefWidth="200.0">
          <children>
             <Button fx:id="btnSubmitForm" alignment="CENTER" mnemonicParsing="false" onAction="#submitForm" style="-fx-background-color: #052C65;" text="Tambahkan" textFill="WHITE" />
