reorganize project move all related view into views directory and add new directory - pages

--- a/src/main/resources/views/pages/adminjurusan/kelola-data-mahasiswa.fxml
+++ b/src/main/resources/views/pages/adminjurusan/kelola-data-mahasiswa.fxml
@@ -30,7 +30,7 @@
                         <graphic>
                             <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                                 <image>
-                                    <Image url="@../../icons/plus-square.png" />
+                                    <Image url="@../../../icons/plus-square.png" />
                                 </image></ImageView>
                         </graphic>
                         <padding>
