--- a/src/main/resources/views/components/admin/topbar.fxml
+++ b/src/main/resources/views/components/admin/topbar.fxml
@@ -12,7 +12,7 @@
          <children>
             <ImageView fitHeight="150.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../img/foto-steve-jobs.png" />
+                  <Image url="@../../../img/foto-steve-jobs.png" />
                </image>
                <HBox.margin>
                   <Insets left="10.0" right="10.0" />
@@ -39,7 +39,7 @@
       </HBox>
       <ImageView fitHeight="150.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
          <image>
-            <Image url="@../../img/notification-icon.png" />
+            <Image url="@../../../img/notification-icon.png" />
          </image>
          <HBox.margin>
             <Insets right="30.0" />
