--- a/src/main/resources/views/pages/adminprodi/detail-permintaan-verif.fxml
+++ b/src/main/resources/views/pages/adminprodi/detail-permintaan-verif.fxml
@@ -23,7 +23,7 @@
                 <children>
                     <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                            <Image url="@../../img/arrow-left-square.png" />
+                            <Image url="@../../../img/arrow-left-square.png" />
                         </image>
                         <HBox.margin>
                             <Insets right="20.0" />
@@ -54,7 +54,7 @@
                                              <Label prefHeight="18.0" prefWidth="122.0" text="Informasi Mahasiswa " />
                                              <ImageView fitHeight="25.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                                 <image>
-                                                   <Image url="@../../img/info-circle.png" />
+                                                   <Image url="@../../../img/info-circle.png" />
                                                 </image>
                                              </ImageView>
                                           </children>
@@ -100,7 +100,7 @@
                                              <Label prefHeight="18.0" prefWidth="122.0" text="Informasi Permintaan" />
                                              <ImageView fitHeight="25.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                                 <image>
-                                                   <Image url="@../../img/info-circle.png" />
+                                                   <Image url="@../../../img/info-circle.png" />
                                                 </image>
                                              </ImageView>
                                           </children>
@@ -176,7 +176,7 @@
                                  <Label prefHeight="18.0" prefWidth="122.0" text="Detail Informasi" />
                                  <ImageView fitHeight="25.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                       <Image url="@../../img/info-circle.png" />
+                                       <Image url="@../../../img/info-circle.png" />
                                     </image>
                                  </ImageView>
                               </children>
